[package]
name = "operator"
version = "0.1.0"
description = "An application to manage data structures through a web interface."
readme = "README.md"
repository = "https://github.com/alinex/rust-operator"
#documentation = "http://ironframework.io/doc/iron/"
license = "Apache 2"
authors = ["Alexander Schilling <info@alinex.de>"]

[workspace]

[dependencies]
clap = '~2.23.2'
ansi_term = '~0.9.0'
webserver = { path = "webserver" }

[dev-dependencies]
gag = '*'

[profile.release]
opt-level = 3
lto = true
debug = false
rpath = false
debug-assertions = false
panic = 'abort'
